objects/CN_Credit_Term_Application__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account_OwnerId__c</fullName>
        <formula>CASESAFEID(CN_Account__r.OwnerId )</formula>
        <label>Account OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Sync_Status__c</fullName>
        <formula>TEXT(CN_Account__r.CN_Sync_Status__c)</formula>
        <label>Account Sync Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_510,FIND(&quot;services&quot;, $Api.Partner_Server_URL_510)-1) &amp;  CN_Account__c</formula>
        <label>CN_Account_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account__c</fullName>
        <label>Sold-to Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Term Applications</relationshipLabel>
        <relationshipName>Credit_Term_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_Any_Legal_Case__c</fullName>
        <label>Any legal case</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Any_Other_Information_Available__c</fullName>
        <label>Any other information available</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Approve_Aging_Trigger_Datetime__c</fullName>
        <label>Approve Aging Trigger Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Approve_Step__c</fullName>
        <label>Approve Step</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Step1</fullName>
                </value>
                <value>
                    <fullName>Step2</fullName>
                </value>
                <value>
                    <fullName>Step3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Approved_Datetime__c</fullName>
        <label>Approved Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance AR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Term_Applications_Approver1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Term_Applications_Approver2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Term_Applications_Approver3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Brand__c</fullName>
        <formula>CN_Account__r.CN_Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Business_License__c</fullName>
        <formula>CN_Account__r.CN_Business_License__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business License #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Business_Unit__c</fullName>
        <formula>CN_Account__r.CN_Business_Unit_UI__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CTA_Email_Subject__c</fullName>
        <formula>CN_Account__r.CN_Account_Email_Subject__c</formula>
        <label>CTA Email Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Category__c</fullName>
        <formula>text(CN_Account__r.CN_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Channel__c</fullName>
        <formula>CN_Account__r.CN_Sales_Team_UI__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Company_Background__c</fullName>
        <label>Company Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Credit_Limit_Incl_VAT__c</fullName>
        <label>Credit Limit (incl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Current_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Term_Applications_Current_Apporve</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Delivery_Address__c</fullName>
        <formula>CN_Account__r.CN_Invoicing_Address_CN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Delivery Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Finance_MDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance MDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Term_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_General_Comment_For_Approvers__c</fullName>
        <label>General comment for approvers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Group__c</fullName>
        <formula>CN_Account__r.CN_Group_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_Approving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_License_Name_CN__c</fullName>
        <formula>CN_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Name(CN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_License_Name_EN__c</fullName>
        <formula>CN_Account__r.CN_License_Name_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Name(EN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Nature_Of_Request__c</fullName>
        <label>Nature of Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Customer</fullName>
                </value>
                <value>
                    <fullName>TM1 (Hotel-3month rule)</fullName>
                </value>
                <value>
                    <fullName>TM2 (BAPA-3month rule)</fullName>
                    <label>TM2(Excluding Hotel-3month rule)</label>
                </value>
                <value>
                    <fullName>NO CONTRACT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Payment_Application_Reference_Number__c</fullName>
        <label>Payment Application Reference Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CN_Payment_Term_Negotiated__c</fullName>
        <label>Payment Term Negotiated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D005</fullName>
                    <label>D005-D05/5 days after delivery</label>
                </value>
                <value>
                    <fullName>D010</fullName>
                    <label>D010-D10/10 days after delivery</label>
                </value>
                <value>
                    <fullName>D015</fullName>
                    <label>D015-15 days after delivery</label>
                </value>
                <value>
                    <fullName>D020</fullName>
                    <label>D020-20 days, due net</label>
                </value>
                <value>
                    <fullName>D030</fullName>
                    <label>D030-30 days, due net</label>
                </value>
                <value>
                    <fullName>D045</fullName>
                    <label>D045-45 days, due net</label>
                </value>
                <value>
                    <fullName>D060</fullName>
                    <label>D060-60days, due net</label>
                </value>
                <value>
                    <fullName>D090</fullName>
                    <label>D090-90days, due net</label>
                </value>
                <value>
                    <fullName>M110</fullName>
                    <label>M110-10 th of next month, due net</label>
                </value>
                <value>
                    <fullName>M115</fullName>
                    <label>M115-15 th of next month, due net</label>
                </value>
                <value>
                    <fullName>M131</fullName>
                    <label>M131-30 days end of month, due net</label>
                </value>
                <value>
                    <fullName>M145</fullName>
                    <label>M145-Before 15th in 2 months, due net</label>
                </value>
                <value>
                    <fullName>M231</fullName>
                    <label>M231-60 days end of month, due net</label>
                </value>
                <value>
                    <fullName>D000</fullName>
                    <isActive>false</isActive>
                    <label>D000-Payment in advance</label>
                </value>
                <value>
                    <fullName>D003-Pay immediately with Invoice</fullName>
                    <isActive>false</isActive>
                    <label>D003-Pay immediately with Invoice</label>
                </value>
                <value>
                    <fullName>D120-120 days, due net</fullName>
                    <isActive>false</isActive>
                    <label>D120-120 days, due net</label>
                </value>
                <value>
                    <fullName>M120-20 th of next month, due net</fullName>
                    <isActive>false</isActive>
                    <label>M120-20 th of next month, due net</label>
                </value>
                <value>
                    <fullName>M23-60 days end of month, due net</fullName>
                    <isActive>false</isActive>
                    <label>M23-60 days end of month, due net</label>
                </value>
                <value>
                    <fullName>M331-90 days end of month, due net</fullName>
                    <isActive>false</isActive>
                    <label>M331-90 days end of month, due net</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Please_Confirm__c</fullName>
        <formula>CASE(
TEXT( CN_Status__c  ),
&quot;New&quot;, $Label.CN_PleaseConfirm_Value_BackToNew,
&quot;Ready for Approval&quot;, $Label.CN_PleaseConfirm_Value_ReadyForApproval,
&quot;Submitted for Approval&quot;, $Label.CN_PleaseConfirm_Value_AlreadySubmitted,
$Label.CN_PleaseConfirm_Value_AlreadySubmitted
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Please Confirm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Potential_Monthly_Sales_Incl_VAT__c</fullName>
        <formula>CN_Account__r.CN_Potential_Volume_Sinodis_Chance__c</formula>
        <label>Potential Monthly Sales (Incl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Reasons_For_Applying_For_Credit_Term__c</fullName>
        <label>Reasons for applying for credit term</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Reference_Day__c</fullName>
        <label>Reference Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery_Day</fullName>
                    <label>Delivery Day</label>
                </value>
                <value>
                    <fullName>Fapiao_Day</fullName>
                    <label>Fapiao Day</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Region__c</fullName>
        <formula>TEXT(CN_Account__r.CN_Sales_Office__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SAP_Customer_Code__c</fullName>
        <formula>CN_Account__r.CN_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SF_Customer_Code__c</fullName>
        <formula>CN_Account__r.CN_SF_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person_Email__c</fullName>
        <label>Sales Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person_Name__c</fullName>
        <formula>CN_Account__r.Owner.LastName + &apos; &apos; + CN_Account__r.Owner.FirstName</formula>
        <label>Sales Person Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Team__c</fullName>
        <formula>CN_Account__r.CN_Sales_Team_UI__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Type_Of_Contract_Customer_Can_Sign__c</fullName>
        <label>Type of contract customer can sign</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>With guarantee</fullName>
                </value>
                <value>
                    <fullName>Without guarantee</fullName>
                </value>
                <value>
                    <fullName>Siodis standard contract</fullName>
                </value>
                <value>
                    <fullName>Customer own template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Type_Of_Customer__c</fullName>
        <label>Type of customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Partership firm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Credit Term Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Expired_CTA_approved_within_three_months</fullName>
        <columns>NAME</columns>
        <columns>CN_License_Name_CN__c</columns>
        <columns>CN_License_Name_EN__c</columns>
        <columns>CN_Nature_Of_Request__c</columns>
        <columns>CN_Payment_Term_Negotiated__c</columns>
        <columns>CN_Reference_Day__c</columns>
        <columns>CN_Approved_Datetime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Approved_Datetime__c</field>
            <operation>lessThan</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>CN_Approved_Datetime__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Expired Credit Term Application</label>
    </listViews>
    <nameField>
        <displayFormat>CA{0000000000}</displayFormat>
        <label>Credit Term Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Term Applications</pluralLabel>
    <recordTypes>
        <fullName>CN_Credit_Term_Application</fullName>
        <active>true</active>
        <label>CN Credit Term Application</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CN_AccountApproved_NotSynced</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Credit_Term_Application&apos;,
  ISPICKVAL(CN_Account__r.CN_Account_Status__c , &quot;Approved&quot;),
  NOT(ISPICKVAL(CN_Account__r.CN_Sync_Status__c ,&quot;Success&quot;)) 
)</errorConditionFormula>
        <errorMessage>Please wait for a few minutes until the account synced to SAP.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_CTA_Prevent_Change_Status_In_Approve</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Credit_Term_Application&apos;,
  IF(CN_Is_Approving__c ,  ISCHANGED( CN_Status__c ) , FALSE)
)</errorConditionFormula>
        <errorMessage>Not Allowed to Change Status in Approving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_PaymentTerm</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Credit_Term_Application&apos;,
  OR(
    ISPICKVAL(CN_Payment_Term_Negotiated__c, &quot;CIA&quot;),
    ISPICKVAL(CN_Payment_Term_Negotiated__c, &quot;D000&quot;)
  ),
  ISPICKVAL( CN_Reference_Day__c ,&quot;Fapiao_Day&quot;)
)</errorConditionFormula>
        <errorDisplayField>CN_Reference_Day__c</errorDisplayField>
        <errorMessage>You are not allowed to choose Fapiao Day for CIA or COD customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Create_Or_Change</fullName>
        <active>true</active>
        <description>If have ongoing CTA, not allow to Create or change status Edit (Status from Cancal to New)

Ongoning CTA means Account.Latest CTA Status is  not Blank and  approved</description>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Credit_Term_Application&apos;,
  OR(
     AND(
       ISPICKVAL(CN_Status__c,&quot;New&quot;),
       ISPICKVAL(PRIORVALUE(CN_Status__c),&quot;Cancel&quot; )
     ),
     ISNEW() 
  ),
  NOT(
    OR(
      ISPICKVAL( CN_Account__r.CN_Latest_Credit_Term_App_Status__c , &quot;Approved&quot;),
      ISBLANK(TEXT(CN_Account__r.CN_Latest_Credit_Term_App_Status__c))
    )
  )
  
)</errorConditionFormula>
        <errorMessage>Please continue with the ongoing credit term application or cancel it and create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_For_Ready_Approved</fullName>
        <active>true</active>
        <description>CN: Can&apos;t edit except Status when status is Ready for Approval and can&apos;t edit anything when status is Approved</description>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
RecordType.DeveloperName = &apos;CN_Credit_Term_Application&apos;,
OR(AND(ISPICKVAL(CN_Status__c, &quot;Ready for Approval&quot;),   NOT(ISCHANGED(CN_Status__c))), AND(ISPICKVAL(PRIORVALUE(CN_Status__c),&quot;Approved&quot;), ISPICKVAL(CN_Status__c, &quot;Approved&quot;)))
)</errorConditionFormula>
        <errorMessage>You can&apos;t change this Credit Term Application when Status is Ready for Approval or Approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_On_Ready_And_Submit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Credit_Term_Application&apos;,
  OR(
    ISPICKVAL( CN_Account__r.CN_Account_Status__c , &quot;Ready for Approval&quot;),
    ISPICKVAL( CN_Account__r.CN_Account_Status__c , &quot;Submitted for Approval&quot;)
  ),
  ISNEW()
)</errorConditionFormula>
        <errorMessage>You are not allowed to create credit term application when account is already marked as ready for approval or Submitted for Approval.</errorMessage>
    </validationRules>
</CustomObject>